Add new Scenario implementation for the NewStream
