# server/routes/api.php
@@ -1,6 +1,7 @@
-<?php
+<?php declare(strict_types=1);
 
-use App\Http\Controllers\ArticleController;
+use App\Http\Controllers\ArticleListController;
+use App\Http\Controllers\ProductMarkController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -18,5 +19,6 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/me', fn (Request $request) => $request->user());
 
-    Route::get('/articles', ArticleController::class);
+    Route::get('/articles', ArticleListController::class);
+    Route::post('/products/{id}/mark', ProductMarkController::class);
 });
